Refactor all Events pages

--- a/event1.html
+++ b/event1.html
@@ -9,16 +9,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title> Events | ICT LAB</title>
+    <title>Events | ICT Lab</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,7 +27,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 
 </head>
 
@@ -65,13 +65,13 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown">
+                    <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">News and Events <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="news.html">News</a>
                             </li>
-                            <li>
+                            <li class="active">
                                 <a href="event.html">Events</a>
                             </li>
                         </ul>
@@ -102,7 +102,7 @@
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active"> <a href="news.html"> News </a></li>
+                    <li class="active"> <a href="news.html">Events</a></li>
                 </ol>
             </div>
         </div>
@@ -129,21 +129,7 @@
                     <p>The last contribution of this thesis to CBIR shows how our framework enhances the BoVP model. Finally, a query expansion technique is employed to increase the retrieval scores on both BoVW and BoVP models.</p>
                     
                     <div class="img-center" style="height: 500px; width: 800px">
-                        <div class="carousel-inner">
-                            <div id="carousel-example-generic" class="carousel slide" style="height: 450px; width: 800px" data-ride="carousel">
-                                <!-- Indicators -->
-                                <ol class="carousel-indicators">
-                                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                                </ol>
-
-                                <!-- Wrapper for slides -->
-                                <div class="carousel-inner">
-                                    <div class="item active">
-                                        <img class="img-responsive" src="img_event/event1.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <img class="img-responsive img-rounded" src="img_event/event1.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -155,13 +141,12 @@
         
         <!-- /.row -->
 
-        <hr>
-
         <!-- Footer -->
-        <footer>
+        <footer class="modal-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <hr>
+                    <p>Copyright &copy; ICTLab</p>
                 </div>
             </div>
         </footer>
