--- a/project_archives.html
+++ b/project_archives.html
@@ -149,7 +149,7 @@
             </div>
 
             <div class="col-sm-3 col-xs-6 text-center">
-                <a href="project_SWARMS.html">
+                <a href="project_swarms.html">
                     <img class="img-responsive img-hover img-related" src="img_swarms_project/img_swarms_thumb.jpg" alt="">
                     <br>
                     <p>SWARMS Project</p>
