--- a/project_swarms.html
+++ b/project_swarms.html
@@ -147,7 +147,7 @@
             </div>
 
             <div class="col-sm-3 col-xs-6 text-center">
-                <a href="project_ARCHIVES.html">
+                <a href="project_archives.html">
                     <img class="img-responsive img-hover img-related" src="img_archives_project/img_archives_thumb.png" alt="">
                     <br>
                     <p>ARCHIVES Project</p>
